Rework to be playable in browser

--- a/index.html
+++ b/index.html
@@ -8,6 +8,48 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+
+    <div id="introTextDiv">
+        <p>Welcome to the hardest battle of your life...<br>
+        It's you versus the computer in...<br>
+        A <span id="title">Rock Paper Scissors</span> Showdown</p>
+    </div>
+
+    <div id="roundDiv"></div>
+
+    <div id="winReqDiv">
+        <p>( 1st to 5 wins )</p>
+    </div>
+
+    <div id="summaryOneDiv"></div>
+
+    <div id="summaryTwoDiv"></div>
+
+    <div id="starterDiv">
+        <button id="startBtn">Start a New Game</button>
+    </div>
+
+    <div id="selectionsDiv">
+        <button id="rockBtn" class="sBtn">Rock</button>
+        <button id="paperBtn" class="sBtn">Paper</button>
+        <button id="scissorsBtn" class="sBtn">Scissors</button>
+    </div>
+
+    <div id="nextRoundDiv">
+        <button id="nextRoundBtn">Next Round</button>
+    </div>
+
+    <div id="scoresDiv">
+        <div id="playerScoreDiv">
+            <p class="scoreText">You</p>
+            <p id="playerScoreBox" class="scoreBox"></p>
+        </div>
+        <div id="computerScoreDiv">
+            <p class="scoreText">Computer</p>
+            <p id="computerScoreBox" class="scoreBox"></p>
+        </div>
+    </div>
+    
     
 </body>
 </html>
